# privacypolicypaper

./: .editorconfig  Negationwords_Lexicon_Lovatoetal_V1_2023.csv  README.md  SBM_topic_Model_Privacy_Policy_Paper_2023.ipynb  TODO.md  US_PII_Lexicon_Lovatoetal_V1_2023.csv  Viz_PII_Frequency_Privacy_Policy_Paper_2023.ipynb  analyze_coocurrence_graph.py  calculate_topic_timeseries.py  countwords_uniquewords_Privacy_Policy_Paper_2023.ipynb  generate_cooccurrence_network.py  negation_filtered_policytext_PII.ipynb  plot_topic_timeseries.py  pyproject.toml  split_by_year.py
.github/workflows/: script_tests.yml
extract/: extract_from_sqlite.py  join.py
lib/: compare_topics.py  cooccurrence.py  data_cleaning.py  pii_terms.py  timed_execution.py
tests/: compare_topics_test.py  cooccurrence_test.py  data_cleaning_test.py  pii_terms_test.py
