[tool.poetry]
name = "privacy-policies-temporal-flow"
version = "0.1.0"
description = ""
authors = ["Philip Mueller <philip.mueller@uvm.edu>", "Juniper Lovato <juniper.lovato@uvm.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
igraph = "^0.10.2"
stop-words = "^2018.7.23"
pandas = "^1.5.1"
sklearn = "^0.0"
nltk = "^3.7"
matplotlib = "^3.6.0"
seaborn = "^0.12.1"
pandarallel = "^1.6.3"
bertopic = "^0.12.0"
gensim = "^4.2.0"
networkx = "^2.8.8"
pydot = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
